<resources>
    <string name="search_all_hint">Search destinations, landmarks and addresses</string>
    <string name="destinations_hint">Search destinations&#8230;</string>
    <string name="origins_hint">Search origins&#8230;</string>
    <string name="to_TEMPLATE">To %s</string>
    <string name="from_TEMPLATE">From %s</string>
    <string name="great_unknown">the Great Unknown</string>
    <string name="just_you">Just You</string>
    <string name="dates_status_none">Enter your travel dates below.</string>
    <string name="dates_status_one">One-way flights and one-night stays.</string>
    <string name="dates_status_multi_TEMPLATE">Round-trip flights and %s-night stays.</string>
    <string name="start_date_TEMPLATE">Start Date: %s</string>
    <string name="end_date_optional">End Date: (Optional)</string>
    <string name="end_date_TEMPLATE">End Date: %s</string>
    <string name="cd_month_previous_TEMPLATE">%s previous month</string>
    <string name="cd_month_current_TEMPLATE">%s current month</string>
    <string name="cd_month_next_TEMPLATE">%s next month</string>
    <string name="cd_day_of_week_TEMPLATE">Day %1$s, %2$s</string>
    <string name="cd_day_selected_TEMPLATE">%s in trip</string>
    <string name="cd_day_selected_start_TEMPLATE">%s start date</string>
    <string name="cd_day_selected_end_TEMPLATE">%s end date</string>
    <string name="cd_day_invalid_TEMPLATE">%s not selectable</string>
    <string name="results">Results</string>
    <string name="Sort_and_Filter">Sort &amp; Filter</string>
    <string name="Done">Done</string>
    <plurals name="x_Hotels_TEMPLATE">
        <item quantity="zero">%s Hotels</item>
        <item quantity="one">%s Hotel</item>
        <item quantity="two">%s Hotels</item>
        <item quantity="few">%s Hotels</item>
        <item quantity="many">%s Hotels</item>
        <item quantity="other">%s Hotels</item>
    </plurals>
    <plurals name="x_of_y_Hotels_TEMPLATE">
        <item quantity="zero">%1$s of %2$s Hotels</item>
        <item quantity="one">%1$s of %2$s Hotel</item>
        <item quantity="two">%1$s of %2$s Hotels</item>
        <item quantity="few">%1$s of %2$s Hotels</item>
        <item quantity="many">%1$s of %2$s Hotels</item>
        <item quantity="other">%1$s of %2$s Hotels</item>
    </plurals>
    <plurals name="of_y_hotels_TEMPLATE">
        <item quantity="zero">of %s hotels</item>
        <item quantity="one">of %s hotel</item>
        <item quantity="two">of %s hotels</item>
        <item quantity="few">of %s hotels</item>
        <item quantity="many">of %s hotels</item>
        <item quantity="other">of %s hotels</item>
    </plurals>
    <plurals name="x_Flights_TEMPLATE">
        <item quantity="zero">%s Flights</item>
        <item quantity="one">%s Flight</item>
        <item quantity="two">%s Flights</item>
        <item quantity="few">%s Flights</item>
        <item quantity="many">%s Flights</item>
        <item quantity="other">%s Flights</item>
    </plurals>
    <string name="destination_and_date_range_TEMPLATE">%1$s, %2$s</string>
    <string name="trip_to">Trip To</string>
    <string name="trip_empty">Your trip is empty.</string>
    <string name="trip_bucket_book_flight">Book Flight</string>
    <string name="trip_bucket_book_hotel">Book Hotel</string>
    <string name="actionbar_tablet_results_flights_title_TEMPLATE">Flights to %1$s</string>
    <string name="actionbar_tablet_results_hotels_title_TEMPLATE">%1$s Hotels</string>
    <string name="VIP">VIP</string>
    <string name="Sort_By">Sort By</string>
    <string name="Filters">Filters</string>
    <string name="Areas">Areas</string>
    <string name="Other_Areas">Other Areas</string>
    <string name="popular">popular</string>
    <string name="price">price</string>
    <string name="rating">rating</string>
    <string name="distance">distance</string>
    <string name="cd_sort_by_popular">Press to sort by the most popular hotels.</string>
    <string name="cd_sort_by_price">Press to sort by the least expensive hotels.</string>
    <string name="cd_sort_by_rating">Press to sort by the most highly rated hotels.</string>
    <string name="cd_sort_by_distance">Press to sort by the closest hotels.</string>
    <string name="From_x_TEMPLATE">From %s</string>
    <string name="stops">Stops</string>
    <string name="airlines">Airlines</string>
    <plurals name="x_Stops_TEMPLATE">
        <item quantity="zero">No Stops</item>
        <item quantity="one">%s Stop</item>
        <item quantity="two">%s Stops</item>
        <item quantity="few">%s Stops</item>
        <item quantity="many">%s Stops</item>
        <item quantity="other">%s Stops</item>
    </plurals>
    <string name="departure_airports">Departure Airports</string>
    <string name="arrival_airports">Arrival Airports</string>
    <string name="n_stars_TEMPLATE">%1$s stars</string>
    <string name="n_reviews_TEMPLATE">%1$s reviews</string>
    <string name="recommend">recommend</string>
    <plurals name="rooms_left">
        <item quantity="zero">rooms left</item>
        <item quantity="one">room left</item>
        <item quantity="two">rooms left</item>
        <item quantity="few">rooms left</item>
        <item quantity="many">rooms left</item>
        <item quantity="other">rooms left</item>
    </plurals>
    <string name="out_of_5">out of 5</string>
    <string name="Read_Reviews">Read Reviews</string>
    <string name="No_Reviews">No Reviews</string>
    <string name="Non_Refundable">Non Refundable</string>
    <string name="add_for_TEMPLATE">Add for %1$s</string>
    <string name="flight_cities_TEMPLATE">%1$s to %2$s</string>
    <string name="flight_on_time_TEMPLATE">%s%% on time</string>
    <string name="round_trip">Round Trip</string>
    <string name="total_with_tax">Total with tax</string>
    <string name="spinner_text_hotel_create_trip">Creating the trip ...</string>
    <string name="your_trip">Your Trip</string>
    <string name="now_booking_TEMPLATE">Now Booking &lt;b&gt;%1$s&lt;/b&gt;</string>
    <string name="dates_and_nights_TEMPLATE">%1$s (%2$s)</string>
    <string name="facebook_weve_found_your_account">Hey &lt;b&gt;%1$s&lt;/b&gt;, looks like we\'ve found your Expedia account! Please enter your expedia password below to link your facebook and expedia accounts.</string>
    <string name="facebook_weve_fetched_your_info">Hey &lt;b&gt;%1$s&lt;/b&gt;, we\'ve loaded your facebook information!</string>
    <string name="Log_in_with_Facebook">Log in with Facebook</string>
    <string name="fetching_facebook_info">Fetching information from facebook…</string>
    <string name="attempting_to_log_in_with_facebook">Attempting to log you in with facebook credentials…</string>
    <string name="unspecified_error">We have encountered an unspecified error. Please try again later.</string>
    <string name="unable_to_log_into_facebook">Unable to log in to Facebook.</string>
    <string name="login_failed_try_again">Login failed. If your email and password are correct, confirm that your app\'s Country setting is correct.</string>
    <string name="expedia_password_hint">Expedia Password</string>
    <string name="link_accounts">Link Accounts</string>
    <string name="failure_to_update_user">Failure to fetch updated user information.</string>
    <string name="linking_your_accounts">Linking your accounts…</string>
    <string name="Log_In">Log In</string>
    <string name="Log_in_with_Expedia">Log in with Expedia</string>
    <string name="or">or</string>
    <string name="already_logged_in">Already logged in</string>
    <string name="restricted_profile_login_message">To log in to Expedia, you must use an unrestricted user profile on your device.</string>
    <string name="nav_home">Home</string>
    <string name="nav_flights">Flights</string>
    <string name="nav_hotels">Hotels</string>
    <string name="nav_account">Account</string>
    <string name="launch_hotel_secondary_text">Get a room.</string>
    <string name="launch_flight_secondary_text">Get away.</string>
    <string name="launch_flight_tile_prompt">&lt;font color="#b2b2b2"&gt;Fly to&lt;/font&gt; &lt;font color="#f3f3f3"&gt;%s&lt;/font&gt;</string>
    <string name="launch_hotel_fallback_tile_prompt">&lt;font color="#b2b2b2"&gt;Stay in&lt;/font&gt; &lt;font color="#f3f3f3"&gt;%s&lt;/font&gt;</string>
    <string name="error_launch_connection">Unfortunately, we can\'t connect.</string>
    <string name="trips">Trips</string>
    <string name="google_play_services_unrecoverable_error">This app requires Google Play Services. Please install the latest version of Google Play Services.</string>
    <string name="Check_in_available">Check in available</string>
    <string name="x_flight_to_x_TEMPLATE">%1$s flight to %2$s</string>
    <string name="your_flight_to_x_TEMPLATE">Your flight to %1$s</string>
    <string name="Check_out_today">Check out today</string>
    <string name="Car_Pick_Up_X_TEMPLATE">Car Pick Up – %s</string>
    <string name="You_can_now_pick_up_your_car">You can now pick up your car.</string>
    <string name="Car_Drop_Off_X_TEMPLATE">Car Drop Off – %s</string>
    <string name="Your_rental_is_due_returned">Your rental car is due to be returned in two hours.</string>
    <string name="Activity_starting_soon">Activity starting soon</string>
    <string name="Your_X_ticket_can_be_redeemed_TEMPLATE">Your %s ticket can be redeemed starting tomorrow.</string>
    <string name="itinerary">Itinerary</string>
    <string name="shop">Shop</string>
    <string name="find_itinerary">Find Itinerary</string>
    <string name="find_itinerary_pound">Find Itinerary #</string>
    <string name="expedia_itinerary">Expedia Itinerary #</string>
    <string name="elite_plus_customer_support">Elite Plus Customer Support</string>
    <string name="no_upcoming_trips">No upcoming trips.</string>
    <string name="enter_itinerary_number">Enter Itinerary Number</string>
    <string name="fetching_your_itinerary">Fetching your itineraries…</string>
    <string name="itinerary_fetch_error">Error fetching itineraries</string>
    <string name="log_in_for_your_trips">&lt;b&gt;Log in&lt;/b&gt; for your trips</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="Today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="sort_description_departure">Departs</string>
    <string name="sort_description_arrival">Arrives</string>
    <string name="sort_description_duration">Duration</string>
    <string name="sort_flights">Sort Flights</string>
    <string name="select_dates">Select Dates</string>
    <string name="log_out">Log Out</string>
    <string name="more_actions">More Actions</string>
    <string name="share_trip">Share via Email</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="get_there">Get There</string>
    <string name="search">Search</string>
    <string name="filter_hotel_name_hint">Filter by hotel name</string>
    <string name="sort_description_price">Price</string>
    <string name="stop_description_any">Any Stops</string>
    <string name="stop_description__max">One or Less</string>
    <string name="stop_description__nonstop">No Stops</string>
    <string name="all">All</string>
    <string name="filter_price_cheap">$</string>
    <string name="filter_price_moderate">$$</string>
    <string name="filter_price_expensive">$$$</string>
    <string name="filter_stars_three">3+</string>
    <string name="filter_stars_four">4+</string>
    <string name="filter_stars_five">5</string>
    <string name="filter_vip_access">Only VIP Access Hotels</string>
    <string name="GuestsLabel">Guests</string>
    <string name="log_in">Log In</string>
    <string name="hint_password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="Settings">Settings</string>
</resources>