<?xml version="1.0" encoding="utf-8"?>
<com.mobiata.android.widget.SegmentedControlGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sort_by_button_group"
    style="@style/Widget.SegmentedControlGroup.DarkFilterControls"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="horizontal" >

    <RadioButton
        android:id="@+id/sort_by_popular_button"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:text="@string/popular"
        android:contentDescription="@string/cd_sort_by_popular"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/sort_by_price_button"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:text="@string/price"
        android:contentDescription="@string/cd_sort_by_price"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/sort_by_rating_button"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:checked="true"
        android:text="@string/rating"
        android:contentDescription="@string/cd_sort_by_rating"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/sort_by_distance_button"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:contentDescription="@string/cd_sort_by_distance"
        android:text="@string/distance"
        android:textStyle="bold" />

</com.mobiata.android.widget.SegmentedControlGroup>