<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add_itinerary"
        android:icon="@drawable/ic_add_event"
        android:showAsAction="ifRoom"
        android:title="@string/find_itinerary">
        <menu>
            <item
                android:id="@+id/add_itinerary_login"
                android:title="@string/log_in"/>
            <item
                android:id="@+id/add_itinerary_guest"
                android:title="@string/find_itinerary_pound"/>
        </menu>
    </item>
    <item
        android:id="@+id/ab_log_out"
        android:icon="@drawable/ic_traveler_white"
        android:showAsAction="never"
        android:title="@string/log_out"/>
    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:showAsAction="never"
        android:title="@string/Settings"/>
    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="never"
        android:title="@string/About"/>

</menu>