<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:id="@+id/group_results" >
        <item
            android:id="@+id/menu_sort"
            android:showAsAction="always|withText"
            android:title="@string/sort_flights">
            <menu>
                <group
                    android:id="@+id/menu_select_sort_group"
                    android:checkableBehavior="single" >
                    <item
                        android:id="@+id/menu_select_sort_price"
                        android:checked="true"
                        android:icon="@drawable/ic_sort_price"
                        android:title="@string/sort_description_price"/>
                    <item
                        android:id="@+id/menu_select_sort_departs"
                        android:icon="@drawable/ic_departure_arrow_small"
                        android:title="@string/sort_description_departure"/>
                    <item
                        android:id="@+id/menu_select_sort_arrives"
                        android:icon="@drawable/ic_return_arrow_small"
                        android:title="@string/sort_description_arrival"/>
                    <item
                        android:id="@+id/menu_select_sort_duration"
                        android:icon="@drawable/ic_clock_small"
                        android:title="@string/sort_description_duration"/>
                </group>
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_bar_magnifying_glass"
        android:showAsAction="always|withText"
        android:title="@string/search"/>

</menu>