<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <RadioButton
            android:id="@+id/flight_sort_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_description_price"
            android:textSize="10sp" />

    <RadioButton
            android:id="@+id/flight_sort_departs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_description_departure"
            android:textSize="10sp" />

    <RadioButton
            android:id="@+id/flight_sort_arrives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_description_arrival"
            android:textSize="10sp" />

    <RadioButton
            android:id="@+id/flight_sort_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_description_duration"
            android:textSize="10sp" />

</merge>