<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="20dp"
	android:orientation="vertical"
	android:gravity="center_horizontal">
	<EditText
		android:id="@+id/username_edit_text"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/email_address"
		android:inputType="textEmailAddress" />
	<EditText
		android:id="@+id/password_edit_text"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/hint_password"
		android:inputType="textPassword" />
	<Button
		android:id="@+id/log_in_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/log_in" />
</LinearLayout>
