<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.expedia.bookings.widget.SlidingRadioGroup
            android:id="@+id/flight_sort_control"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            style="@style/Widget.SlidingRadioGroup.TabletFilterControls">

        <RadioButton
                android:id="@+id/flight_sort_price"
                style="@style/Widget.RadioButton.TabletFilterControls"
                android:text="@string/sort_description_price"
                android:textSize="10sp" />

        <RadioButton
                android:id="@+id/flight_sort_departs"
                style="@style/Widget.RadioButton.TabletFilterControls"
                android:text="@string/sort_description_departure"
                android:textSize="10sp" />

        <RadioButton
                android:id="@+id/flight_sort_arrives"
                style="@style/Widget.RadioButton.TabletFilterControls"
                android:text="@string/sort_description_arrival"
                android:textSize="10sp" />

        <RadioButton
                android:id="@+id/flight_sort_duration"
                style="@style/Widget.RadioButton.TabletFilterControls"
                android:text="@string/sort_description_duration"
                android:textSize="10sp" />

    </com.expedia.bookings.widget.SlidingRadioGroup>

</merge>