<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <RadioButton
            android:id="@+id/flight_filter_stop_any"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_description_any"
            android:textSize="10sp" />

    <RadioButton
            android:id="@+id/flight_filter_stop_one_or_less"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_description__max"
            android:textSize="10sp" />

    <RadioButton
            android:id="@+id/flight_filter_stop_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_description__nonstop"
            android:textSize="10sp" />

</merge>