<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <com.expedia.bookings.widget.TextView
        android:id="@+id/get_there_text_view"
        style="@style/Confirmation.Header.Flight"
        android:text="@string/get_there"
        app:textStyle="light" />

    <View
        android:id="@+id/get_there_text_divider"
        style="@style/Confirmation.Divider.Header.Flight" />

    <TextView
        android:id="@+id/flights_action_text_view"
        style="@style/Confirmation.Action.Flight"
        android:drawableLeft="@drawable/ic_bed" />

    <com.expedia.bookings.widget.TextView
        android:id="@+id/more_actions_text_view"
        style="@style/Confirmation.Header.Flight"
        android:layout_marginTop="16dp"
        android:text="@string/more_actions"
        app:textStyle="light" />

    <View style="@style/Confirmation.Divider.Header.Flight" />

    <com.expedia.bookings.widget.ConfirmationActionTextView
        android:id="@+id/share_action_text_view"
        style="@style/Confirmation.Action.Flight"
        android:drawableLeft="@drawable/ic_social_share"
        android:text="@string/share_trip" />

    <View
        android:id="@+id/calendar_divider"
        style="@style/Confirmation.Divider.Action.Flight" />

    <com.expedia.bookings.widget.ConfirmationActionTextView
        android:id="@+id/calendar_action_text_view"
        style="@style/Confirmation.Action.Flight"
        android:drawableLeft="@drawable/ic_calendar_add"
        android:text="@string/add_to_calendar" />

</merge>